<resources>
    <string name="app_name">Earthquake Monitor</string>

    <string name="content_authority">com.almareng.earthquakemonitor</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_detail_location">Location:</string>
    <string name="earthquake_detail_date_format">dd MMM yyyy</string>
    <string name="earthquake_detail_time_format">HH:mm:ss</string>
    <string name="activity_detail_map_epicenter">Epicenter</string>
    <string name="enable_gps">Enable</string>
    <string name="gps_needed">You need enable GPS to see Earthquakes by distance, do you want to enable GPS?</string>

    <!-- Settings Screen -->
    <string name="searching_time_title">Searching Time</string>
    <string name="searching_time_key">searching_time</string>
    <string name="searching_time_default">hour</string>
    <string name="searching_time_last_hour_label">This Hour</string>
    <string name="searching_time_last_day_label">This Day</string>
    <string name="searching_time_last_week_label">This Week</string>
    <string name="searching_time_last_hour_value">hour</string>
    <string name="searching_time_last_day_value">day</string>
    <string name="searching_time_last_week_value">week</string>
    <string name="magnitude_pref_title">Minimum Magnitude to Show</string>
    <string name="magnitude_pref_key">minimum_magnitude</string>
    <string name="magnitude_pref_default">2</string>
    <string name="magnitude_out_of_range">You must insert a value between 1.0 and 7.0</string>
    <string name="searching_distance_title">Searching Distance</string>
    <string name="searching_distance_key">searching_distance</string>
    <string name="searching_distance_default">1000000</string>
    <string name="display_notifications_title">Display Notifications</string>
    <string name="display_notifications_key">display_notifications</string>
    <string name="display_notifications_default" translatable="false">true</string>
    <string name="title_activity_settings">Settings</string>

    <string name="distance_format">Distance: %s km</string>
    <string name="sharing_intent_message" formatted="false">There was an Earthquake with magnitude %s on date %s at %s %s, with coordinates lat: %s and lon: %s</string>
    <string name="action_share">Share Data</string>
    <string name="earthquake_list_empty_view_message">No earthquakes registered for the chosen settings</string>
    <string name="volley_fetching_error_message">Sorry, there was an error loading earthquake data, please try again later</string>
    <string name="magnitude_text_transition_name">magnitude text</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">earthquakemonitor.almareng.com</string>
    <string name="last_registered_earthquakes">Last earthquakes:</string>
    <string name="new_earthquakes_registered">New earthquakes registered</string>
    <string name="title_widget">Earthquake Monitor Details</string>

</resources>
